--- a/src/com/dashboard/main/Main.fxml
+++ b/src/com/dashboard/main/Main.fxml
@@ -1,8 +1,138 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.layout.StackPane?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.text.*?>
+<?import javafx.scene.shape.*?>
+<?import javafx.scene.canvas.*?>
+<?import javafx.scene.chart.*?>
+<?import javafx.scene.*?>
+<?import java.lang.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
 
-<StackPane xmlns:fx="http://javafx.com/fxml/1">
-	<!-- TODO Add Nodes -->
-</StackPane>
-
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="623.0" prefWidth="940.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+   <children>
+      <VBox prefHeight="200.0" prefWidth="100.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+         <children>
+            <HBox prefHeight="567.0" prefWidth="940.0" VBox.vgrow="ALWAYS">
+               <children>
+                  <VBox prefHeight="451.0" prefWidth="461.0" HBox.hgrow="ALWAYS">
+                     <children>
+                        <Label text="Vacinação" textFill="#3f4043">
+                           <font>
+                              <Font name="Lucida Bright Regular" size="28.0" />
+                           </font>
+                           <VBox.margin>
+                              <Insets bottom="32.0" left="32.0" right="32.0" top="48.0" />
+                           </VBox.margin>
+                        </Label>
+                        <AreaChart prefHeight="435.0" prefWidth="608.0" VBox.vgrow="ALWAYS">
+                          <xAxis>
+                            <CategoryAxis side="BOTTOM" />
+                          </xAxis>
+                          <yAxis>
+                            <NumberAxis side="LEFT" />
+                          </yAxis>
+                           <VBox.margin>
+                              <Insets bottom="16.0" left="28.0" right="28.0" />
+                           </VBox.margin>
+                        </AreaChart>
+                     </children>
+                  </VBox>
+                  <VBox alignment="TOP_RIGHT" prefHeight="567.0" prefWidth="277.0" style="-fx-background-color: #f0f5f7;">
+                     <children>
+                        <VBox alignment="BOTTOM_RIGHT" prefHeight="95.0" prefWidth="213.0">
+                           <children>
+                              <ChoiceBox prefWidth="150.0">
+                                 <VBox.margin>
+                                    <Insets bottom="12.0" />
+                                 </VBox.margin>
+                              </ChoiceBox>
+                              <ChoiceBox prefWidth="150.0" />
+                           </children>
+                        </VBox>
+                        <VBox alignment="CENTER_RIGHT" prefHeight="200.0" prefWidth="100.0" VBox.vgrow="ALWAYS">
+                           <children>
+                              <Label text="18%" textAlignment="CENTER" textFill="#252626">
+                                 <font>
+                                    <Font name="Lucida Bright Regular" size="80.0" />
+                                 </font>
+                                 <VBox.margin>
+                                    <Insets />
+                                 </VBox.margin>
+                              </Label>
+                              <Label text="2 doses" textAlignment="RIGHT" textFill="#252626">
+                                 <font>
+                                    <Font name="Lucida Bright Regular" size="15.0" />
+                                 </font>
+                              </Label>
+                              <Label alignment="CENTER" text="31%" textFill="#252626">
+                                 <font>
+                                    <Font name="Lucida Bright Regular" size="56.0" />
+                                 </font>
+                                 <VBox.margin>
+                                    <Insets top="28.0" />
+                                 </VBox.margin>
+                              </Label>
+                              <Label text="1ª dose" textAlignment="RIGHT" textFill="#252626">
+                                 <font>
+                                    <Font name="Lucida Bright Regular" size="15.0" />
+                                 </font>
+                                 <VBox.margin>
+                                    <Insets top="8.0" />
+                                 </VBox.margin>
+                              </Label>
+                              <Label alignment="CENTER" text="4.1 meses" textFill="#252626">
+                                 <font>
+                                    <Font name="Lucida Bright Regular" size="34.0" />
+                                 </font>
+                                 <VBox.margin>
+                                    <Insets top="28.0" />
+                                 </VBox.margin>
+                              </Label>
+                              <Label text="até 70% com uma dose*" textAlignment="RIGHT" textFill="#252626">
+                                 <font>
+                                    <Font name="Lucida Bright Regular" size="15.0" />
+                                 </font>
+                                 <VBox.margin>
+                                    <Insets top="8.0" />
+                                 </VBox.margin>
+                              </Label>
+                              <Label alignment="CENTER" text="4%" textFill="#252626">
+                                 <font>
+                                    <Font name="Lucida Bright Regular" size="40.0" />
+                                 </font>
+                                 <VBox.margin>
+                                    <Insets top="28.0" />
+                                 </VBox.margin>
+                              </Label>
+                              <Label text=" nos últimos 7 dias**" textAlignment="RIGHT" textFill="#252626">
+                                 <font>
+                                    <Font name="Lucida Bright Regular" size="15.0" />
+                                 </font>
+                                 <VBox.margin>
+                                    <Insets top="8.0" />
+                                 </VBox.margin>
+                              </Label>
+                           </children>
+                           <padding>
+                              <Insets bottom="16.0" />
+                           </padding>
+                        </VBox>
+                     </children>
+                     <HBox.margin>
+                        <Insets />
+                     </HBox.margin>
+                     <padding>
+                        <Insets left="32.0" right="32.0" />
+                     </padding>
+                     <opaqueInsets>
+                        <Insets />
+                     </opaqueInsets>
+                  </VBox>
+               </children>
+            </HBox>
+         </children>
+      </VBox>
+   </children>
+</AnchorPane>
