--- a/src/com/dashboard/components/scenes/vaccinations/VaccinationsScene.fxml
+++ b/src/com/dashboard/components/scenes/vaccinations/VaccinationsScene.fxml
@@ -9,14 +9,14 @@
 <?import java.lang.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
-<?import com.dashboard.components.menuBar.DashboardMenuBar?>
 
-<fx:root fx:controller="com.dashboard.components.scenes.vaccinations.VaccinationsScene" type="AnchorPane"
-		 maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="623.0" prefWidth="940.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<!-- <?import com.dashboard.components.menuBar.DashboardMenuBar?> -->
+
+<fx:root maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="623.0" prefWidth="940.0" type="AnchorPane" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.dashboard.components.scenes.vaccinations.VaccinationsScene">
    <children>
       <VBox prefHeight="200.0" prefWidth="100.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
-            <DashboardMenuBar></DashboardMenuBar>
+            <!-- <DashboardMenuBar></DashboardMenuBar> -->
             <HBox prefHeight="567.0" prefWidth="940.0" VBox.vgrow="ALWAYS">
                <children>
                   <VBox prefHeight="451.0" prefWidth="461.0" HBox.hgrow="ALWAYS">
@@ -29,7 +29,7 @@
                               <Insets bottom="32.0" left="32.0" right="32.0" top="48.0" />
                            </VBox.margin>
                         </Label>
-                        <AreaChart animated="true" fx:id="vaccinationsChart" prefHeight="435.0" prefWidth="608.0" VBox.vgrow="ALWAYS">
+                        <AreaChart fx:id="vaccinationsChart" animated="true" prefHeight="435.0" prefWidth="608.0" VBox.vgrow="ALWAYS">
                           <xAxis>
                             <CategoryAxis side="BOTTOM" />
                           </xAxis>
@@ -42,7 +42,7 @@
                         </AreaChart>
                      </children>
                   </VBox>
-                  <VBox alignment="TOP_RIGHT" prefHeight="567.0" prefWidth="277.0" style="-fx-background-color: #f0f5f7;">
+                  <VBox alignment="TOP_RIGHT" prefHeight="623.0" prefWidth="362.0" style="-fx-background-color: #f0f5f7;">
                      <children>
                         <VBox alignment="BOTTOM_RIGHT" prefHeight="95.0" prefWidth="213.0">
                            <children>
@@ -54,9 +54,9 @@
                               <ChoiceBox fx:id="stateChoiceBox" prefWidth="150.0" />
                            </children>
                         </VBox>
-                        <VBox alignment="CENTER_RIGHT" prefHeight="200.0" prefWidth="100.0" VBox.vgrow="ALWAYS">
+                        <VBox alignment="CENTER" prefHeight="528.0" prefWidth="301.0" VBox.vgrow="ALWAYS">
                            <children>
-                              <Label fx:id="twoDosesLabel" text="18%" textAlignment="CENTER" textFill="#252626">
+                              <Label fx:id="twoDosesLabel" alignment="CENTER" prefHeight="94.0" prefWidth="317.0" text="18%" textFill="#252626" textOverrun="CLIP">
                                  <font>
                                     <Font name="Lucida Bright Regular" size="80.0" />
                                  </font>
@@ -69,7 +69,7 @@
                                     <Font name="Lucida Bright Regular" size="15.0" />
                                  </font>
                               </Label>
-                              <Label fx:id="oneDoseLabel" alignment="CENTER" text="31%" textFill="#252626">
+                              <Label fx:id="oneDoseLabel" alignment="CENTER" prefHeight="65.0" prefWidth="308.0" text="31%" textFill="#252626" textOverrun="CLIP">
                                  <font>
                                     <Font name="Lucida Bright Regular" size="56.0" />
                                  </font>
@@ -85,7 +85,7 @@
                                     <Insets top="8.0" />
                                  </VBox.margin>
                               </Label>
-                              <Label fx:id="monthsLeftLabel" alignment="CENTER" text="4.1 meses" textFill="#252626">
+                              <Label fx:id="monthsLeftLabel" alignment="CENTER" prefHeight="41.0" prefWidth="389.0" text="4.1 meses" textFill="#252626" textOverrun="CLIP">
                                  <font>
                                     <Font name="Lucida Bright Regular" size="34.0" />
                                  </font>
@@ -101,7 +101,7 @@
                                     <Insets top="8.0" />
                                  </VBox.margin>
                               </Label>
-                              <Label fx:id="vaccinatedLast7Days" alignment="CENTER" text="4%" textFill="#252626">
+                              <Label fx:id="vaccinatedLast7Days" alignment="CENTER" prefHeight="47.0" prefWidth="345.0" text="4%" textFill="#252626" textOverrun="CLIP">
                                  <font>
                                     <Font name="Lucida Bright Regular" size="40.0" />
                                  </font>
