--- a/src/com/dashboard/components/menuBar/DashboardMenuBar.fxml
+++ b/src/com/dashboard/components/menuBar/DashboardMenuBar.fxml
@@ -14,8 +14,7 @@
 	>
 	<children>
 		<Button fx:id="vaccinationsButton" mnemonicParsing="false" styleClass="DashboardMenuBar" text="Vacinação" />
-		<Button fx:id="infectedButton" mnemonicParsing="false" styleClass="DashboardMenuBar" text="Infectados" />
-		<Button fx:id="hospitalsButton" mnemonicParsing="false" styleClass="DashboardMenuBar" text="Lotação de hospitais" />
+		<Button fx:id="infectedButton" mnemonicParsing="false" styleClass="DashboardMenuBar" text="Evolução da doença" />
 		<Button fx:id="newsButton" mnemonicParsing="false" styleClass="DashboardMenuBar" text="Reportagens" />
 		<Button fx:id="vaccineScheduleButton" mnemonicParsing="false" styleClass="DashboardMenuBar" text="Cronograma de vacinação" />
 	</children>
