--- a/src/com/dashboard/components/scenes/vaccinations/VaccinationsScene.fxml
+++ b/src/com/dashboard/components/scenes/vaccinations/VaccinationsScene.fxml
@@ -16,11 +16,11 @@
    <children>
       <VBox prefHeight="200.0" prefWidth="100.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
-            <DashboardMenuBar></DashboardMenuBar>
             <HBox prefHeight="567.0" prefWidth="940.0" VBox.vgrow="ALWAYS">
                <children>
-                  <VBox prefHeight="451.0" prefWidth="461.0" HBox.hgrow="ALWAYS">
+                  <VBox prefHeight="451.0" prefWidth="461.0" style="-fx-background-color: #ffffff;" HBox.hgrow="ALWAYS">
                      <children>
+                        <DashboardMenuBar></DashboardMenuBar>
                         <Label fx:id="titleVaccination" text="Vacinação" textFill="#3f4043">
                            <font>
                               <Font name="Lucida Bright Regular" size="28.0" />
@@ -40,6 +40,22 @@
                               <Insets bottom="16.0" left="28.0" right="28.0" />
                            </VBox.margin>
                         </AreaChart>
+                        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="*Aproximaçao que assume o ritmo dos ultimos 7 dias de vacinaçao se mantera ate 70% da populaçao vacinada">
+                           <VBox.margin>
+                              <Insets bottom="6.0" left="42.0" right="42.0" top="16.0" />
+                           </VBox.margin>
+                           <font>
+                              <Font name="Lucida Bright Regular" size="11.0" />
+                           </font>
+                        </Text>
+                        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="** Número de pessoas vacinadas nos últimos 7 dias (incluindo primeira e segunda dose)">
+                           <VBox.margin>
+                              <Insets bottom="28.0" left="42.0" right="42.0" />
+                           </VBox.margin>
+                           <font>
+                              <Font name="Lucida Bright Regular" size="11.0" />
+                           </font>
+                        </Text>
                      </children>
                   </VBox>
                   <VBox alignment="TOP_RIGHT" prefHeight="623.0" prefWidth="362.0" style="-fx-background-color: #f0f5f7;">
@@ -53,10 +69,13 @@
                               </ChoiceBox>
                               <ChoiceBox fx:id="stateChoiceBox" prefWidth="150.0" />
                            </children>
+                           <VBox.margin>
+                              <Insets bottom="16.0" />
+                           </VBox.margin>
                         </VBox>
-                        <VBox alignment="CENTER" prefHeight="528.0" prefWidth="301.0" VBox.vgrow="ALWAYS">
+                        <VBox alignment="CENTER" prefHeight="528.0" prefWidth="301.0" style="-fx-background-color: #f0f5f7;" VBox.vgrow="ALWAYS">
                            <children>
-                              <Label fx:id="twoDosesLabel" alignment="CENTER" prefHeight="94.0" prefWidth="317.0" text="18%" textFill="#252626" textOverrun="CLIP">
+                              <Label fx:id="twoDosesLabel" alignment="CENTER" prefHeight="94.0" prefWidth="317.0" text="18%" textFill="#141414" textOverrun="CLIP">
                                  <font>
                                     <Font name="Lucida Bright Regular" size="80.0" />
                                  </font>
@@ -64,12 +83,12 @@
                                     <Insets />
                                  </VBox.margin>
                               </Label>
-                              <Label text="2 doses" textAlignment="RIGHT" textFill="#252626">
+                              <Label text="2 doses" textAlignment="RIGHT" textFill="#141414">
                                  <font>
                                     <Font name="Lucida Bright Regular" size="15.0" />
                                  </font>
                               </Label>
-                              <Label fx:id="oneDoseLabel" alignment="CENTER" prefHeight="65.0" prefWidth="308.0" text="31%" textFill="#252626" textOverrun="CLIP">
+                              <Label fx:id="oneDoseLabel" alignment="CENTER" prefHeight="65.0" prefWidth="308.0" text="31%" textFill="#141414" textOverrun="CLIP">
                                  <font>
                                     <Font name="Lucida Bright Regular" size="56.0" />
                                  </font>
@@ -77,7 +96,7 @@
                                     <Insets top="28.0" />
                                  </VBox.margin>
                               </Label>
-                              <Label text="1ª dose" textAlignment="RIGHT" textFill="#252626">
+                              <Label text="1ª dose" textAlignment="RIGHT" textFill="#141414">
                                  <font>
                                     <Font name="Lucida Bright Regular" size="15.0" />
                                  </font>
@@ -85,7 +104,7 @@
                                     <Insets top="8.0" />
                                  </VBox.margin>
                               </Label>
-                              <Label fx:id="monthsLeftLabel" alignment="CENTER" prefHeight="41.0" prefWidth="389.0" text="4.1 meses" textFill="#252626" textOverrun="CLIP">
+                              <Label fx:id="monthsLeftLabel" alignment="CENTER" prefHeight="41.0" prefWidth="389.0" text="4.1 meses" textFill="#141414" textOverrun="CLIP">
                                  <font>
                                     <Font name="Lucida Bright Regular" size="34.0" />
                                  </font>
@@ -93,7 +112,7 @@
                                     <Insets top="28.0" />
                                  </VBox.margin>
                               </Label>
-                              <Label text="até 70% com duas doses*" textAlignment="RIGHT" textFill="#252626">
+                              <Label text="até 70% com duas doses*" textAlignment="RIGHT" textFill="#141414">
                                  <font>
                                     <Font name="Lucida Bright Regular" size="15.0" />
                                  </font>
@@ -101,7 +120,7 @@
                                     <Insets top="8.0" />
                                  </VBox.margin>
                               </Label>
-                              <Label fx:id="vaccinatedLast7Days" alignment="CENTER" prefHeight="47.0" prefWidth="345.0" text="4%" textFill="#252626" textOverrun="CLIP">
+                              <Label fx:id="vaccinatedLast7Days" alignment="CENTER" prefHeight="47.0" prefWidth="345.0" text="4%" textFill="#141414" textOverrun="CLIP">
                                  <font>
                                     <Font name="Lucida Bright Regular" size="40.0" />
                                  </font>
@@ -109,7 +128,7 @@
                                     <Insets top="28.0" />
                                  </VBox.margin>
                               </Label>
-                              <Label text=" nos últimos 7 dias**" textAlignment="RIGHT" textFill="#252626">
+                              <Label text=" nos últimos 7 dias**" textAlignment="RIGHT" textFill="#141414">
                                  <font>
                                     <Font name="Lucida Bright Regular" size="15.0" />
                                  </font>
@@ -121,6 +140,9 @@
                            <padding>
                               <Insets bottom="16.0" />
                            </padding>
+                           <VBox.margin>
+                              <Insets />
+                           </VBox.margin>
                         </VBox>
                      </children>
                      <HBox.margin>
