--- a/src/com/dashboard/components/scenes/infected/InfectedScene.fxml
+++ b/src/com/dashboard/components/scenes/infected/InfectedScene.fxml
@@ -16,7 +16,7 @@
    <children>
       <VBox prefHeight="200.0" prefWidth="100.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
-            <DashboardMenuBar></DashboardMenuBar>
+            <DashboardMenuBar selected="infected"></DashboardMenuBar>
          </children>
       </VBox>
    </children>
