--- a/src/com/dashboard/components/scenes/vaccinations/VaccinationsScene.fxml
+++ b/src/com/dashboard/components/scenes/vaccinations/VaccinationsScene.fxml
@@ -73,7 +73,6 @@
                                     <Insets bottom="12.0" />
                                  </VBox.margin>
                               </ChoiceBox>
-                              <ChoiceBox fx:id="stateChoiceBox" prefWidth="150.0" />
                            </children>
                            <VBox.margin>
                               <Insets bottom="16.0" />
@@ -89,7 +88,7 @@
                                     <Insets />
                                  </VBox.margin>
                               </Label>
-                              <Label text="2 doses" textAlignment="RIGHT" textFill="#141414">
+                              <Label text="totalmente vacinados" textAlignment="RIGHT" textFill="#141414">
                                  <font>
                                     <Font name="Lucida Bright Regular" size="15.0" />
                                  </font>
@@ -118,7 +117,7 @@
                                     <Insets top="28.0" />
                                  </VBox.margin>
                               </Label>
-                              <Label text="até 70% com duas doses*" textAlignment="RIGHT" textFill="#141414">
+                              <Label text="até 70% totalmente vacinado*" textAlignment="RIGHT" textFill="#141414">
                                  <font>
                                     <Font name="Lucida Bright Regular" size="15.0" />
                                  </font>
