--- a/src/com/dashboard/components/scenes/newsReports/NewsReportsScene.fxml
+++ b/src/com/dashboard/components/scenes/newsReports/NewsReportsScene.fxml
@@ -9,14 +9,20 @@
 <?import java.lang.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
+<?import javafx.scene.web.*?>
+
 <?import com.dashboard.components.menuBar.DashboardMenuBar?>
 
-<fx:root fx:controller="com.dashboard.components.scenes.newsReports.NewsReportsScene" type="AnchorPane"
-		 maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="623.0" prefWidth="940.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<fx:root maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="623.0" prefWidth="940.0" type="AnchorPane" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.dashboard.components.scenes.newsReports.NewsReportsScene">
    <children>
       <VBox prefHeight="200.0" prefWidth="100.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
-            <DashboardMenuBar selected="news"></DashboardMenuBar>
+            <DashboardMenuBar selected="news">
+               <VBox.margin>
+                  <Insets left="16.0" />
+               </VBox.margin>
+            </DashboardMenuBar>
+            <WebView fx:id="webView" />
          </children>
       </VBox>
    </children>
